# fwa

./: .gitignore  CHANGELOG.md  README.md  TODO.md  example.har  payloads.csv  pyproject.toml
fwa/: analyzer_manager.py  fuzzer.py  main.py  oracle_manager.py  recorder.py  test_analyzers.py  test_fuzzer.py  test_fwa.py  test_oracle.py
fwa/analyzers/: alert_execution.py  content_length.py  status_code.py  strings_in_response.py  time_delay.py
fwa/oracle/: cmdi.py  lfi.py  sql.py  xss.py
fwa/utils/: har.py  helper.py  mitm.py  payloads.py  phantomjs.py  webserver.py
scripts/: .gitignore  change_entries.py  cmdi.txt  extract_har.py  har.py  kill_mitm.sh  lfi.txt  list.txt.invalid  list.txt.old  list_entries.py  owasp_har_characteristics.py  sql.txt  xss.txt  zap-spider.py
tests/: test.har
tests/fwa-sessions/: swigger-sqli.har
tests/fwa-sessions/owasp/: fwa-owasp-sqli.har
tests/owasp/: owasp-lfi.har
tests/owasp/evaluation/: evaluate.py  owasp-results.txt  utils.py  wapiti.json
tests/owasp/sessions/: fwa-owasp-sqli.har  owasp-ldap.har  owasp-sqli.har  owasp-xss.har  owasp-xxe.har
tests/owasp/training/: cmdi.sh  evaluate.py  lfi.sh  sqli.sh  test_req.py  xss.sh
tests/owasp/vm/: Makefile  init.sh
tests/payloads/owasp/: sql.txt
tests/sessions/time-based/: fwa-swigger-sqli.har  swigger-sqli.har
tests/virtual-env/: Makefile
